--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body>
     <header>
-        <a href="/">
-            <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo">
+        <a href="#topo">
+            <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo" id="topo">
         </a>
         <button id="botao-alterar-tema">
             <img src="./src/imagens/sun.png" alt="imagem do sol" class="imagem-botao">
