--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <header>
+    <header id="topo">
         <a href="#topo">
-            <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo" id="topo">
+            <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo">
         </a>
         <button id="botao-alterar-tema">
             <img src="./src/imagens/sun.png" alt="imagem do sol" class="imagem-botao">
