--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header id="topo">
         <a href="#topo">
-            <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo">
+            <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo" href="#topo">
         </a>
         <button id="botao-alterar-tema">
             <img src="./src/imagens/sun.png" alt="imagem do sol" class="imagem-botao">
