--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header >
-        <a href="/">
+        <a  href="#topo">
             <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo" id="topo">
         </a>
         <button id="botao-alterar-tema">
@@ -32,7 +32,7 @@
                     <span>Bulbassar</span>
                     <span>#001</span>
                 </div>
-                <img src="./src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif" href="#topo">
+                <img src="./src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif">
 
                 <ul class="tipos">
                     <li class="tipo grama">Grama</li>
