--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header >
         <a  href="#topo">
-            <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo" id="topo">
+            <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo">
         </a>
         <button id="botao-alterar-tema">
             <img src="./src/imagens/sun.png" alt="imagem do sol" class="imagem-botao">
@@ -32,7 +32,7 @@
                     <span>Bulbassar</span>
                     <span>#001</span>
                 </div>
-                <img src="./src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif">
+                <img src="./src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif" id="topo">
 
                 <ul class="tipos">
                     <li class="tipo grama">Grama</li>
