--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listagem PokÉmon</title>
+    <title>Listagem Pokémon</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <header >
-        <a  href="#topo">
+    <header>
+        <a href="/">
             <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo">
         </a>
         <button id="botao-alterar-tema">
@@ -32,7 +32,7 @@
                     <span>Bulbassar</span>
                     <span>#001</span>
                 </div>
-                <img src="./src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif" id="topo">
+                <img src="./src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif">
 
                 <ul class="tipos">
                     <li class="tipo grama">Grama</li>
@@ -183,12 +183,21 @@
                 <ul class="tipos">
                     <li class="tipo inseto">Inseto</li>
                 </ul>
-                <p class="descricao">Para proteção, ele libera um fedor horrível da antena em sua cabeça para afastar os inimigos.</p>
+                <p class="descricao">Para proteção, ele libera um fedor horrível da antena em sua cabeça para afastar os
+                    inimigos.</p>
 
             </li>
 
         </ul>
     </main>
+
+    <footer>
+        <div class="sites" >
+        <img src="./src/imagens/Pokeball-Download-Transparent-PNG-Image.png" alt="imagem pokebola aberta" class="pokebola_aberta">
+        <a href="./src/projetos.html" class="meus_projetos"><strong>Conheça meus outros projetos</strong></a>
+        </div>
+    </footer>
+
     <script src="./src/JS/index.js"></script>
 </body>
 
