--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <footer>
         <div class="sites" >
         <img src="./src/imagens/Pokeball-Download-Transparent-PNG-Image.png" alt="imagem pokebola aberta" class="pokebola_aberta">
-        <a href="./src/projetos.html" class="meus_projetos"><strong>Conheça meus outros projetos</strong></a>
+        <a href="projetos.html" class="meus_projetos"><strong>Conheça meus outros projetos</strong></a>
         </div>
     </footer>
 
