--- a/projetos.html
+++ b/projetos.html
@@ -53,7 +53,7 @@
         </section>
     </main>
 
-    <script src="./JS/projetos.js"></script>
+    <script src="./src/JS/projetos.js"></script>
 </body>
 
 </html>
