--- a/index.html
+++ b/index.html
@@ -192,10 +192,14 @@
     </main>
 
     <footer>
-        <div class="sites" >
+        <a href="./src/projetos.html" class="link-sites">
+        <div class="sites">
         <img src="./src/imagens/Pokeball-Download-Transparent-PNG-Image.png" alt="imagem pokebola aberta" class="pokebola_aberta">
-        <a href="./src/projetos.html" class="meus_projetos"><strong>Conheça meus outros projetos</strong></a>
+        <span class="meus_projetos">
+            <strong>Conheça meus outros projetos</strong>
+        </span>
         </div>
+        </a>
     </footer>
 
     <script src="./src/JS/index.js"></script>
