adicionando links do linkedin e github em imagens dos mesmos, posteriormente ajustando seus espaçamentos

--- a/src/projetos.html
+++ b/src/projetos.html
@@ -30,26 +30,36 @@
             <ul>
 
                 <li>
-                    <a href="https://link-apresentacao-jean.vercel.app/index.html"
-                        class="meus__projetos" target="_blank">https://link-apresentacao-jean.vercel.app</a>
+                    <a href="https://link-apresentacao-jean.vercel.app/index.html" class="meus__projetos"
+                        target="_blank">https://link-apresentacao-jean.vercel.app</a>
                 </li>
                 <li>
-                    <a href="https://confeitaria-miranda.vercel.app/"
-                        class="meus__projetos" traget="_blank">https://confeitaria-miranda.vercel.app</a>
-                </li>
-
-                <li>
-                    <a href="https://fa-station-jogos.vercel.app/#"
-                        class="meus__projetos" target="_blank">https://fa-station-jogos.vercel.app</a>
+                    <a href="https://confeitaria-miranda.vercel.app/" class="meus__projetos"
+                        traget="_blank">https://confeitaria-miranda.vercel.app</a>
                 </li>
 
                 <li>
-                    <a href="https://projeto-pokemon-inicial.vercel.app/"
-                        class="meus__projetos" targent="_blank">https://projeto-pokemon-inicial.vercel.app</a>
+                    <a href="https://fa-station-jogos.vercel.app/#" class="meus__projetos"
+                        target="_blank">https://fa-station-jogos.vercel.app</a>
+                </li>
+
+                <li>
+                    <a href="https://projeto-pokemon-inicial.vercel.app/" class="meus__projetos"
+                        targent="_blank">https://projeto-pokemon-inicial.vercel.app</a>
                 </li>
 
             </ul>
+
+            <div class="link_redes">
+                <a href="https://github.com/MirandaJean"class="link_redes_ancora" targent="_blank">
+                <img src="./imagens/github.png" alt="logo github" class="link_redes_logo">
+                </a>
+                <a href="//www.linkedin.com/in/jean-miranda-da-silveira-7b297516b/" class="link_redes_ancora" targent="_blank">
+                <img src="./imagens/linkedin.png" alt="logo linkedin" class="link_redes_logo">
+                </a>
+            </div>
         </section>
+
     </main>
 
     <script src="./JS/projetos.js"></script>
