--- a/src/projetos.html
+++ b/src/projetos.html
@@ -45,16 +45,16 @@
 
                 <li>
                     <a href="https://projeto-pokemon-inicial.vercel.app/" class="meus__projetos"
-                        targent="_blank">https://projeto-pokemon-inicial.vercel.app</a>
+                        target="_blank">https://projeto-pokemon-inicial.vercel.app</a>
                 </li>
 
             </ul>
 
             <div class="link_redes">
-                <a href="https://github.com/MirandaJean"class="link_redes_ancora" targent="_blank">
+                <a href="https://github.com/MirandaJean" class="link_redes_ancora" target="_blank">
                 <img src="./imagens/github.png" alt="logo github" class="link_redes_logo">
                 </a>
-                <a href="//www.linkedin.com/in/jean-miranda-da-silveira-7b297516b/" class="link_redes_ancora" targent="_blank">
+                <a href="//www.linkedin.com/in/jean-miranda-da-silveira-7b297516b/" class="link_redes_ancora" target="_blank">
                 <img src="./imagens/linkedin.png" alt="logo linkedin" class="link_redes_logo">
                 </a>
             </div>
